--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://happhee.github.io/SOPT-WEB_SECRET_MAILBOX",
+
   "name": "week7-ts",
   "version": "0.1.0",
   "private": true,
@@ -58,6 +60,5 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1"
-  },
-  "homepage": "https://github.com/Happhee/SOPT-WEB_SECRET_MAILBOX"
+  }
 }
